video-provider: fix safari overflow issue and properly fill height with placeholder
kudos @pedrobmarin

--- a/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
@@ -28,7 +28,6 @@
   grid-auto-flow: dense;
   grid-gap: 1px;
 
-  align-items: center;
   justify-content: center;
 
   @include mq($medium-up) {
